# libra

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  Dockerfile  Findclang_check.cmake  Findclang_format.cmake  Findclang_tidy.cmake  Findcppcheck.cmake  GitVersion.yml  LICENSE  README.md  README.rst  analysis.cmake  build-modes.cmake  clang-options.cmake  clang_check.cmake  clang_format.cmake  clang_tidy.cmake  commitlint.config.js  compile-options.cmake  conanfile.py  cppcheck.cmake  cxx-dev-guide.md  default.profraw  deploy.cmake  doxygen.cmake  git-commit-guide.md  git-issue-guide.md  gnu-options.cmake  intel-options.cmake  package.json  project-local.cmake  project.cmake  pyproject.toml  rustfmt.toml  testing.cmake  workflow.md
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml  smoke-tests-compiler-matrix.yml
clang-tools/: .clang-format  .clang-tidy
cli/: Cargo.toml  README.md  build.rs  clibra.sh
cli/src/: cli.rs  cmake.rs  command.rs  main.rs  preset.rs  runner.rs  utils.rs
cli/src/command/: analyze.rs  build.rs  ci.rs  clean.rs  coverage.rs  docs.rs  doctor.rs  format.rs  generate.rs  info.rs  install.rs  mod.rs  test.rs
cmake/: Findclang_check.cmake  Findclang_format.cmake  Findclang_tidy.cmake  Findcppcheck.cmake  Findgenhtml.cmake  Findlcov.cmake  analysis.cmake  arm-eabi-none-cortex-m7-toolchain.cmake  arm-linux-gnueabihf-toolchain.cmake  build-modes.cmake  clang-options.cmake  clang_check.cmake  clang_format.cmake  clang_tidy.cmake  colorize.cmake  compile-options.cmake  compiler-standard.cmake  components.cmake  config.cmake.in  coverage.cmake  cppcheck.cmake  custom-cmds.cmake  deploy.cmake  doxygen.cmake  gnu-options.cmake  install.cmake  intel-options.cmake  nvidia-options.cmake  project.cmake  reporting.cmake  self.cmake.in  testing.cmake  uninstall.cmake  version.cmake
cmake/libra/: apidoc.cmake  arm-eabi-none-toolchain.cmake  arm-linux-gnueabihf-toolchain.cmake  build_meta.cmake  build_meta_finalize.cmake  (+20 more)
docs/: Makefile  conf.py  index.rst  requirements.txt  selftest.rst
dots/: .clang-format  .clang-tidy  .cmake-format
schema/: help-targets.yaml
scripts/: bootstrap.sh
test_package/: CMakeUserPresets.json  conanfile.py
tests/: CMakeLists.txt  CMakeUserPresets.json  LIBRA_ANALYSIS-utest.sh  LIBRA_ANALYSIS.bats  LIBRA_BUILD_PROF-utest.sh  LIBRA_BUILD_PROF.bats  LIBRA_CODE_COV-utest.sh  LIBRA_CODE_COV.bats  LIBRA_COMPILER_VERSION.bats  LIBRA_COVERAGE.bats  LIBRA_CPACK.bats  LIBRA_CXX_STANDARD-utest.sh  LIBRA_CXX_STANDARD.bats  LIBRA_C_STANDARD-utest.sh  LIBRA_C_STANDARD.bats  LIBRA_DEBUG_INFO-utest.sh  LIBRA_DEBUG_INFO.bats  LIBRA_DEP_ISOLATION.bats  LIBRA_DOCS-utest.sh  LIBRA_DOCS.bats  LIBRA_ERL-utest.sh  LIBRA_ERL.bats  LIBRA_ERL_EXPORT-utest.sh  LIBRA_ERL_EXPORT.bats  LIBRA_EXPORT_INSTALL.bats  LIBRA_FORMAT.bats  LIBRA_FORTIFY-utest.sh  LIBRA_FORTIFY.bats  LIBRA_FPC-utest.sh  LIBRA_FPC.bats  LIBRA_FPC_EXPORT-utest.sh  LIBRA_FPC_EXPORT.bats  LIBRA_GLOBAL_FLAGS.bats  LIBRA_INSTALL.bats  LIBRA_LTO-utest.sh  LIBRA_LTO.bats  LIBRA_NATIVE_OPT-utest.sh  LIBRA_NATIVE_OPT.bats  LIBRA_NO_CCACHE.bats  LIBRA_OPT_LEVEL-utest.sh  (+28 more)
tests/cmake-pkg/: CMakeLists.txt
tests/cmake-pkg/cmake/: project-local.cmake
tests/cmake-pkg/src/: main.c
tests/consume/: libra_consume.cmake
tests/consume/cpm/: CPM.cmake
tests/sample_basic/: CMakeLists.txt
tests/sample_basic/cmake/: project-local.cmake
tests/sample_build_info/: CMakeLists.txt  lib_stub.c  lib_stub.cpp  main.plist
tests/sample_build_info/cmake/: project-local.cmake
tests/sample_build_info/consumer/: CMakeLists.txt  consumer_build_info.c.in  consumer_build_info.cpp.in  main.c  main.cpp
tests/sample_build_info/docs/: Doxyfile.in  conf.py  index.rst
tests/sample_build_info/include/sample_build_info/: stub.hpp
tests/sample_build_info/src/: build_info.c.in  build_info.cpp.in  main.c  main.cpp
tests/sample_cli/: CMakeLists.txt  CMakePresets.json
tests/sample_cli/cmake/: project-local.cmake
tests/sample_components/: CMakeLists.txt  LICENSE
tests/sample_components/cmake/: config.cmake.in  project-local.cmake
tests/sample_consumer/: CMakeLists.txt
tests/sample_consumer/cmake/: project-local.cmake
tests/sample_dep_isolation/dep/: CMakeLists.txt
tests/sample_dep_isolation/dep/cmake/: project-local.cmake
tests/sample_dep_isolation/dep/docs/: Doxyfile.in
tests/sample_dep_isolation/dep/src/: dep.c  dep.cpp
tests/sample_dep_isolation/root/: CMakeLists.txt
tests/sample_dep_isolation/root/cmake/: project-local.cmake
tests/sample_dep_isolation/root/docs/: Doxyfile.in
tests/sample_dep_isolation/root/src/: build_info.c.in  build_info.cpp.in  main.c  main.cpp
tests/sample_export/: CMakeLists.txt
tests/sample_export/cmake/: config.cmake.in  project-local.cmake
tests/sample_keywords/: CMakeLists.txt
tests/sample_keywords/cmake/: project-local.cmake
tests/sample_testing/: CMakeLists.txt
tests/sample_testing/cmake/: project-local.cmake
tests/sample_testing/src/: lib.cpp
tests/sample_testing/tests/: bats_alpha-itest.bats  harness_test.cpp  neg_cpp_alpha-rtest.cpp  neg_cpp_alpha-utest.cpp  neg_cpp_alpha-utest.expected
tests/suites/: run_suite_add_subdirectory.sh  run_suite_conan.sh  run_suite_cpm.sh  run_suite_installed_package.sh
tests/test1_package_configure_exports/: CMakeLists.txt
tests/test1_package_configure_exports/cmake/: config.cmake.in
tests/test2_package_register_target/: CMakeLists.txt
tests/test2_package_register_target/src/: testlib.cpp
tests/test3_package_register_headers/: CMakeLists.txt
tests/test3_package_register_headers/include/: headerlib.hpp
tests/test4_package_register_copyright/: CMakeLists.txt  LICENSE
tests/test4_package_register_copyright/src/: copyrightlib.cpp
tests/test5_package_register_extra_configs/: CMakeLists.txt
tests/test5_package_register_extra_configs/cmake/: extra-config1.cmake  extra-config2.cmake
tests/test5_package_register_extra_configs/src/: configlib.cpp
tests/test6_package_requested_components/: CMakeLists.txt
tests/test6_package_requested_components/src/: componentlib.cpp
(+157 files in other folders)
