[package]
name    = "clibra"
edition = "2021"
license = "MIT"
description = "CLI for the LIBRA CMake framework"
homepage = "https://jharwell.github.io/libra"
repository = "https://github.com/jharwell/libra"
readme = "cli/README.md"
publish = true

# This is a placeholder to satisfy cargo's existence requirement/actual value
# used is set by build.rs
version = "0.0.0"
build = "cli/build.rs"
include = [
  "cli/src/**/*",
  "cli/build.rs"
]
[[bin]]
name = "clibra"
path = "cli/src/main.rs"

[dependencies]
clap         = { version = "4.5", features = ["derive"] }
anyhow       = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
which         = "6"
clap_complete = "4.5"
clap_mangen   = "0.2"
clap-markdown   = "0.1.5"
open = "5"
strip-ansi-escapes = "0.2"
colored = "2"
log = "0.4"
pretty_env_logger = "0.5"
semver = "1"
