[project]
name = "LIBRA"

################################################################################
# The one and only place where the current version is recorded.
################################################################################
version = "0.0.1"

description = "LIBRA"
authors = [
  {name= "John Harwell", email = "john.r.harwell@gmail.com"},
]
dependencies = [

]

requires-python = ">=3.10"
keywords = []
classifiers = [
]


[dependency-groups]
docs = [
  "sphinx",
  "docutils",
  "pydata-sphinx-theme",
  "sphinx-design",
  "tomli",
  "sphinxcontrib-moderncmakedomain",
  "psutil",
  "sphinx-last-updated-by-git",
  "graphviz",
  "toml",
  "sphinx-autobuild",
  "sphinxcontrib-plantuml",
  "myst-parser"
]

dev = [
    {include-group ="docs"},
    "check-jsonschema"
]

[project.urls]
Homepage = "https://jharwell.github.io/libra"
