[package]
name    = "libra"
version = "0.9.46"
edition = "2021"
license = "MIT"
build   = "build.rs"

[[bin]]
name = "clibra"
path = "src/main.rs"

[dependencies]
clap         = { version = "4.5", features = ["derive"] }
anyhow       = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[build-dependencies]
clap          = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen   = "0.2"
